--- a/src/app/addproduct/page.module.css
+++ b/src/app/addproduct/page.module.css
@@ -7,8 +7,7 @@
 }
 
 .cartbody{
-    width: 60%;
- 
+    width: 1200px;
     min-height: 500px;
     display: flex;
     flex-direction: column;
@@ -23,8 +22,6 @@
     height: 50px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding-right: 20px ;
 }
 
 .icon{
@@ -36,10 +33,34 @@
     cursor: pointer;
 }
 
+.searchbar{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    width: fit-content;
+    min-width: 50px;
+  
+    /* border: 2px solid saddlebrown; */
+  }
+  
+  .search{
+    padding-left: 10px;
+    display: block;
+    width: 300px;
+    height: 35px;
+    border-radius: 15px;
+    background-color: rgb(247, 246, 246);
+    border: 2px solid rgb(189, 189, 189);
+    outline: none;
+  /*   transition: width 0.5s ease-in-out ;
+    place-content: none; */
+  }
+
 .cartdetails{
     display: flex;
     width: 1000px;
     height: fit-content;
+    padding-bottom: 20px;
     min-height: 500px;
     gap: 20px;
     flex-wrap: wrap;
@@ -55,3 +76,4 @@
     align-items: flex-end;
     justify-content: center;
 }
+
