--- a/src/component/addcard/page.module.css
+++ b/src/component/addcard/page.module.css
@@ -1,16 +1,24 @@
 .card{
     width: 230px;
-    height: 300px;
+    
+    min-height: 500px;
     box-shadow: 0px 0px 4px #888888;
     display: flex;
     flex-direction: column;
     cursor: pointer;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    gap: 5px;
+   
   }
 
   .imgcontainer{
     width: 100%;
     height: 70%;
     position: relative;
+  }
+  .img{
+    object-fit: contain;
   }
 
   .title{
@@ -34,7 +42,11 @@
     text-overflow: ellipsis;
    
   }
-  .cate{
+  .manageprice{
+    gap: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
     height: 10%;
     padding-left: 5px;
@@ -43,4 +55,23 @@
     overflow: hidden;
     text-overflow: ellipsis;
    
+  }
+
+  .delete{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 10%;
+  }
+
+  .addprice{
+    display: block;
+    width: 150px;
+    height: 35px;
+    border-radius: 15px;
+    background-color: rgb(247, 246, 246);
+    border: 2px solid rgb(189, 189, 189);
+    outline: none;
+  /*   transition: width 0.5s ease-in-out ;
+    place-content: none; */
   }
