--- a/src/component/cartcard/page.module.css
+++ b/src/component/cartcard/page.module.css
@@ -11,6 +11,7 @@
     width: 100%;
     height: 70%;
     position: relative;
+  
   }
 
   .title{
@@ -43,4 +44,11 @@
     overflow: hidden;
     text-overflow: ellipsis;
    
+  }
+
+  .delete{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 10%;
   }
