--- a/src/component/navbar/page.module.css
+++ b/src/component/navbar/page.module.css
@@ -39,6 +39,15 @@
     height: 40px;
     cursor: pointer;
   }
+
+  .text{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 40px;
+    cursor: pointer;
+  }
   
   .searchopen{
     padding-left: 5px;
